@@ -1,6 +1,13 @@
 08/22/2014 Oleg Moskalenko <mom040267@gmail.com>
 Version 4.2.1.1 'Monza':
-	- oAuth security implementation. (TODO)
+	- oAuth security implementation: 
+		TODO:
+		- clients's check_integrity method();
+		- security dialog;
+		- authorization process - test;
+		- access-token must be cached and included only in ALLOCATE and REFRESH;
+		- token timeout;
+		- kid timeout;
 	- TLS renegotiation DoS attack prevention implemented;
 	- FQDN as relay-ip and listener-ip parameters (issue 6)
 	(patch provided by Iñaki Baz Castillo);
